--- a/mon/index.html
+++ b/mon/index.html
@@ -650,13 +650,13 @@
 
 
     <!-- Scheme work for Firma-->
-    <section class="m-5">
+    <section class="mb-5 mt-5">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 text-center">
-                    <h3 class="m-0 header-blocl-scheme">Схема работы с клиентом</h3>
-                    <ul class="scheme-of-jobs">
-                        <li class="scheme-elem d-flex justify-content-start">
+                <div class="col-md-12 text-center animate-box">
+                    <h3 class="m-0 header-blocl-scheme ">Схема работы с клиентом</h3>
+                    <ul class="scheme-of-jobs animate-box">
+                        <li class="scheme-elem d-flex justify-content-start animate-box">
                             <div class="number-icon d-flex justify-content-center align-items-center">
                                 <i class="fa fa-ravelry" aria-hidden="true"></i>
                             </div>
@@ -669,7 +669,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="scheme-elem d-flex justify-content-end">
+                        <li class="scheme-elem d-flex justify-content-end animate-box">
                             <div class="number-icon d-flex justify-content-center align-items-center">
                                 <i class="fa fa-ravelry" aria-hidden="true"></i>
                             </div>
@@ -682,7 +682,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="scheme-elem d-flex justify-content-start">
+                        <li class="scheme-elem d-flex justify-content-start animate-box">
                             <div class="number-icon d-flex justify-content-center align-items-center">
                                 <i class="fa fa-ravelry" aria-hidden="true"></i>
                             </div>
@@ -695,7 +695,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="scheme-elem d-flex justify-content-end">
+                        <li class="scheme-elem d-flex justify-content-end animate-box">
                             <div class="number-icon d-flex justify-content-center align-items-center">
                                 <i class="fa fa-ravelry" aria-hidden="true"></i>
                             </div>
@@ -708,7 +708,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="scheme-elem d-flex justify-content-start mb-0">
+                        <li class="scheme-elem d-flex justify-content-start mb-0 animate-box">
                             <div class="number-icon d-flex justify-content-center align-items-center">
                                 <i class="fa fa-ravelry" aria-hidden="true"></i>
                             </div>
@@ -721,7 +721,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="scheme-elem d-flex justify-content-end">
+                        <li class="scheme-elem d-flex justify-content-end animate-box">
                             <div class="number-icon d-flex justify-content-center align-items-center">
                                 <i class="fa fa-ravelry" aria-hidden="true"></i>
                             </div>
@@ -734,7 +734,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="scheme-elem d-flex justify-content-start mb-0">
+                        <li class="scheme-elem d-flex justify-content-start mb-0 animate-box">
                             <div class="number-icon d-flex justify-content-center align-items-center">
                                 <i class="fa fa-ravelry" aria-hidden="true"></i>
                             </div>
@@ -768,7 +768,7 @@
                         <h3>Какую пользу принесет</h3>
                         <p>вызов дизайнера-конструктора</p>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 animate-box" data-animate-effect="fadeInLeft" >
                         <div>
                             <ul class="profit-desing p-1">
                                 <li><i class="fa fa-star" aria-hidden="true"></i> Он правильно замерит размер кухни</li>
@@ -778,12 +778,12 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-4 d-none d-md-block">
+                    <div class="col-md-4 d-none d-md-block animate-box" data-animate-effect="jackInTheBox">
                         <div>
                             <img src="images/10.jpg" class="img-fluid profit-img">
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
                         <div>
                             <ul class="profit-desing p-1">
                                 <li><i class="fa fa-star" aria-hidden="true"></i> Привезет образцы фасадов, чтобы вы их пощупали и увидели вживую</li>
@@ -819,7 +819,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-group mt-3 text-center">
+                    <div class="form-group mt-3 text-center animate-box">
                         <button type="submit" class="button button-contactForm boxed-btn">Вызвать дизайнера</button>
                     </div>
                 </form>
