--- a/mon/index.html
+++ b/mon/index.html
@@ -840,6 +840,312 @@
 
 
 
+
+<!-- our partner -->
+    <section class="mb-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="section_title text-center mb-5">
+                        <span>Партнеры</span>
+                        <h3>Наши партнеры</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="owl-carousel our_partner animate-box">
+                    <div class="p-5">
+                        <img src="images/blum.png">
+                    </div>
+                    <div class="p-5">
+                        <img src="images/boyard.png">
+                    </div>
+                    <div class="p-5">
+                        <img src="images/egger.png">
+                    </div>
+                    <div class="p-5">
+                        <img src="images/cleaf.png">
+                    </div>
+                    <div class="p-5">
+                        <img src="images/pf.png">
+                    </div>
+                    <div class="p-5">
+                        <img src="images/agt.png">
+                    </div>
+            </div>
+        </div>
+    </section>
+<!-- END our partner -->
+
+<!-- Price in kuhni -->
+    <section>
+        <div class="container">
+            <div class="row ">
+                <div class="col-12">
+                    <div class="section_title text-center mb-5">
+                        <span>Цены</span>
+                        <h3>Цены на кухни</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row justify-content-center align-items-center" >
+
+
+                <div class="col-md-6 col-sm-6 animate-box p-1 p-sm-2 p-md-3" data-animate-effect="fadeInLeft">
+                    <div class="price-item d-flex">
+                        <div class="row no-gutters">
+                            <div class="col-8">
+                                <div class="price-img" >
+                                    <div  class="price-img-style">
+                                        <img src="images/7.jpg" class="img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="price-info text-center d-flex align-items-center justify-content-center">
+                                    <div class="price-item-name animate-box">
+                                        <div>
+                                            <span>Пластик AGT</span>
+                                        </div>
+                                    </div>
+                                    <div class="price-info-item ">
+                                        <div class="price-cash">
+                                           <h3>
+                                               <i class="fa fa-usd" aria-hidden="true"></i>
+                                               <span class="price-cash-num">170</span>
+                                           </h3>
+                                        </div>
+                                            <p>за метр погонный</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-6 animate-box p-1 p-sm-2 p-md-3" data-animate-effect="fadeInRight">
+                    <div class="price-item d-flex">
+                        <div class="row no-gutters">
+                            <div class="col-8">
+                                <div class="price-img" >
+                                    <div  class="price-img-style">
+                                        <img src="images/9.jpg" class="img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="price-info text-center d-flex align-items-center justify-content-center">
+                                    <div class="price-item-name animate-box">
+                                        <div>
+                                            <span>ДСП Egger</span>
+                                        </div>
+                                    </div>
+                                    <div class="price-info-item">
+                                        <div class="price-cash">
+                                            <h3>
+                                                <i class="fa fa-usd" aria-hidden="true"></i>
+                                                <span class="price-cash-num">600</span>
+                                            </h3>
+                                        </div>
+                                        <p>за метр погонный</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-sm-6 animate-box p-1 p-sm-2p-md-3" data-animate-effect="fadeInLeft">
+                    <div class="price-item d-flex">
+                        <div class="row no-gutters">
+                            <div class="col-8">
+
+                                <div class="price-img" >
+                                    <div  class="price-img-style">
+                                        <img src="images/10.jpg" class="img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="price-info text-center d-flex align-items-center justify-content-center">
+                                    <div class="price-item-name animate-box">
+                                        <div>
+                                            <span>Пластик AGT</span>
+                                        </div>
+                                    </div>
+                                    <div class="price-info-item ">
+                                        <div class="price-cash">
+
+                                            <h3>
+                                                <i class="fa fa-usd" aria-hidden="true"></i>
+                                                <span class="price-cash-num">170</span>
+                                            </h3>
+                                        </div>
+                                        <p>за метр погонный</p>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-6 animate-box p-1 p-sm-2 p-md-3" data-animate-effect="fadeInRight">
+                    <div class="price-item d-flex">
+                        <div class="row no-gutters">
+                            <div class="col-8">
+                                <div class="price-img" >
+                                    <div  class="price-img-style">
+                                        <img src="images/8.jpg" class="img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="price-info text-center d-flex align-items-center justify-content-center">
+                                    <div class="price-item-name animate-box">
+                                        <div>
+                                            <span>ДСП Egger</span>
+                                        </div>
+                                    </div>
+                                    <div class="price-info-item">
+                                        <div class="price-cash">
+                                            <h3>
+                                                <i class="fa fa-usd" aria-hidden="true"></i>
+                                                <span class="price-cash-num">600</span>
+                                            </h3>
+                                        </div>
+                                        <p>за метр погонный</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-6 animate-box p-1 p-sm-2 p-md-3 " data-animate-effect="fadeInLeft">
+                    <div class="price-item d-flex">
+                        <div class="row no-gutters">
+                            <div class="col-8">
+
+                                <div class="price-img" >
+                                    <div  class="price-img-style">
+                                        <img src="images/6.jpg" class="img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="price-info text-center d-flex align-items-center justify-content-center">
+                                    <div class="price-item-name animate-box">
+                                        <div>
+                                            <span>Пластик AGT</span>
+                                        </div>
+                                    </div>
+                                    <div class="price-info-item ">
+                                        <div class="price-cash">
+
+                                            <h3>
+                                                <i class="fa fa-usd" aria-hidden="true"></i>
+                                                <span class="price-cash-num">170</span>
+                                            </h3>
+                                        </div>
+                                        <p>за метр погонный</p>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-6 animate-box p-1 p-sm-2 p-md-3" data-animate-effect="fadeInRight">
+                    <div class="price-item d-flex">
+                        <div class="row no-gutters">
+                            <div class="col-8">
+                                <div class="price-img" >
+                                    <div  class="price-img-style">
+                                        <img src="images/5.jpg" class="img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="price-info text-center d-flex align-items-center justify-content-center">
+                                    <div class="price-item-name animate-box">
+                                        <div>
+                                            <span>ДСП Egger</span>
+                                        </div>
+                                    </div>
+                                    <div class="price-info-item">
+                                        <div class="price-cash">
+                                            <h3>
+                                                <i class="fa fa-usd" aria-hidden="true"></i>
+                                                <span class="price-cash-num">600</span>
+                                            </h3>
+                                        </div>
+                                        <p>за метр погонный</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-6 animate-box p-1 p-sm-2 p-md-3" data-animate-effect="fadeInLeft">
+                    <div class="price-item d-flex">
+                        <div class="row no-gutters">
+                            <div class="col-8">
+
+                                <div class="price-img" >
+                                    <div  class="price-img-style">
+                                        <img src="images/4.jpg" class="img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="price-info text-center d-flex align-items-center justify-content-center">
+                                    <div class="price-item-name animate-box">
+                                        <div>
+                                            <span>Пластик AGT</span>
+                                        </div>
+                                    </div>
+                                    <div class="price-info-item ">
+                                        <div class="price-cash">
+
+                                            <h3>
+                                                <i class="fa fa-usd" aria-hidden="true"></i>
+                                                <span class="price-cash-num">170</span>
+                                            </h3>
+                                        </div>
+                                        <p>за метр погонный</p>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-12 text-center">
+                    <p><i class="fa fa-snowflake-o" aria-hidden="true"></i>
+                         Цены указаны средние. Окончательная цена после замера</p>
+                </div>
+            </div>
+        </div>
+    </section>
+<!-- End Price __ >
+
+
     <!-- features_room_startt -->
     <div class="features_room">
         <div class="container">
