--- a/mon/index.html
+++ b/mon/index.html
@@ -107,8 +107,7 @@
                             <div class="main-menu">
                                 <nav>
                                     <ul id="navigation" class="js-clone-nav">
-                                        <li><a class="active" href="index.html">home</a></li>
-                                        <li><a href="rooms.html">rooms</a></li>
+                                        <li><a class="active" href="index.html">Главная</a></li>
                                         <li><a href="about.html">About</a></li>
                                         <li class="has-children">
                                             <a href="#">
@@ -126,12 +125,9 @@
                                                 <li><a href="single-blog.html">Классические</a></li>
                                             </ul>
                                         </li>
-                                        <li class="has-children"><a href="#">pages <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
-                                                <li><a href="elements.html">elements</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="contact.html">Цены</a></li>
+                                        <li><a href="contact.html">О нас</a></li>
+                                        <li><a href="contact.html">Контакты</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -1143,8 +1139,93 @@
             </div>
         </div>
     </section>
-<!-- End Price __ >
+<!-- End Price -->
 
+
+<!-- Rewievs -->
+<section class="mt-5 mb-5">
+        <div class="container  p-0">
+            <div class="row justify-content-center align-items-center">
+                    <div class="col-12 no-gutters">
+                        <div class="section_title text-center mb-5">
+                            <span>Отзывы</span>
+                            <h3>Отзывы клиентов</h3>
+                        </div>
+                    </div>
+            </div>
+            <div class="owl-carousel rewievs p-2">
+                <div class="rewievs-item">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <div class="img-client ">
+                            <img src="images/ani2.jpg" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <div class="pt-5">
+                            <p>
+                                Заказывали кухню. Была идея сделать барную стойку с основанием из металла. Обратились в данную фирму. Были поражены профессианализмом дизайнера. Подсказал соверменные и практичные варианты,
+                                подготовил хороший дизайн-проект.
+                                Кухню установили в срок. Очень доволены. Отдельная благодарность дизайнеру-конструктору.
+                            </p>
+                        </div>
+                        <div class="rewievs-starts">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="rewievs-item">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <div class="img-client ">
+                            <img src="images/ani1.jpg" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <div class="pt-5">
+                            <p>
+                                Заказывали кухню. Была идея сделать барную стойку с основанием из металла. Обратились в данную фирму. Были поражены профессианализмом дизайнера. Подсказал соверменные и практичные варианты,
+                                подготовил хороший дизайн-проект.
+                            </p>
+                        </div>
+                        <div class="rewievs-starts">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="rewievs-item">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <div class="img-client ">
+                            <img src="images/ani3.jpg" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <div class="pt-5">
+                            <p>
+                                Заказывали кухню. Была идея сделать барную стойку с основанием из металла. Обратились в данную фирму. Были поражены профессианализмом дизайнера. Подсказал соверменные и практичные варианты,
+                                подготовил хороший дизайн-проект.
+                                Кухню установили в срок. Очень доволены. Отдельная благодарность дизайнеру-конструктору.
+                            </p>
+                        </div>
+                        <div class="rewievs-starts">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+</section>
+<!-- END Rewievs -->
 
     <!-- features_room_startt -->
     <div class="features_room">
@@ -1283,65 +1364,16 @@
 
     <!-- footer -->
     <footer class="footer">
-        <div class="footer_top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-3 col-md-6 col-lg-3">
-                        <div class="footer_widget">
-                            <h3 class="footer_title">
-                                address
-                            </h3>
-                            <p class="footer_text"> 200, Green road, Mongla, <br>
-                                New Yor City USA</p>
-                            <a href="#" class="line-button">Get Direction</a>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-md-6 col-lg-3">
-                        <div class="footer_widget">
-                            <h3 class="footer_title">
-                                Reservation
-                            </h3>
-                            <p class="footer_text">+10 367 267 2678 <br>
-                                reservation@montana.com</p>
-                        </div>
-                    </div>
-                    <div class="col-xl-2 col-md-6 col-lg-2">
-                        <div class="footer_widget">
-                            <h3 class="footer_title">
-                                Navigation
-                            </h3>
-                            <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Rooms</a></li>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">News</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 col-lg-4">
-                        <div class="footer_widget">
-                            <h3 class="footer_title">
-                                Newsletter
-                            </h3>
-                            <form action="#" class="newsletter_form">
-                                <input type="text" placeholder="Enter your mail">
-                                <button type="submit">Sign Up</button>
-                            </form>
-                            <p class="newsletter_text">Subscribe newsletter to get updates</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="copy-right_text">
             <div class="container">
                 <div class="footer_border"></div>
                 <div class="row">
                     <div class="col-xl-8 col-md-7 col-lg-9">
                         <p class="copy_right">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright <i class="fa fa-copyright" aria-hidden="true"></i> atlas&Co. Все права защищены
+                        </p>
+
+
                     </div>
                     <div class="col-xl-4 col-md-5 col-lg-3">
                         <div class="socail_links">
