--- a/mon/index.html
+++ b/mon/index.html
@@ -29,6 +29,8 @@
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
     <!-- JqueryLightGallery -->
     <link rel="stylesheet" href="css/lightgallery.min.css">
+    <!-- Favicon -->
+    <link rel="icon shortcut" type="image/ico" href="images/favicon/favicon.ico"/>
 </head>
 
 <body>
@@ -96,19 +98,18 @@
                     <div class="row align-items-center no-gutters">
                         <!-- brand IMG-->
                         <div class="col-6 col-md-6 col-xl-2 col-lg-2  col-sm-6">
-                            <div class="logo-img">
+                            <div class="logo-img text-left vertical-align-top">
                                 <a href="index.html">
-                                    <img src="img/logo.png" alt="">
+                                    <img src="img/logo.png" alt="" >
                                 </a>
                             </div>
                         </div>
                         <!-- MAIN MENU -->
-                        <div class="col-xl-6 col-lg-6 d-lg-block d-xl-block d-none ">
+                        <div class="col-xl-8 col-lg-8 d-lg-block d-xl-block d-none ">
                             <div class="main-menu">
                                 <nav>
                                     <ul id="navigation" class="js-clone-nav">
                                         <li><a class="active" href="index.html">Главная</a></li>
-                                        <li><a href="about.html">About</a></li>
                                         <li class="has-children">
                                             <a href="#">
                                                 Кухни
@@ -120,9 +121,20 @@
                                                 <li><a href="single-blog.html">С островком</a></li>
                                                 <li><a href="single-blog.html">Современные</a></li>
                                                 <li><a href="single-blog.html">Классические</a></li>
-                                                <li><a href="single-blog.html">С островком</a></li>
-                                                <li><a href="single-blog.html">Современные</a></li>
-                                                <li><a href="single-blog.html">Классические</a></li>
+                                                <li><a href="single-blog.html">В стиле ЛОФТ</a></li>
+                                            </ul>
+                                        </li>
+                                        <li class="has-children">
+                                            <a href="#">
+                                                Материалы
+                                                <i class="ti-angle-down"></i>
+                                            </a>
+                                            <ul class="submenu">
+                                                <li><a href="#">Фасады</a></li>
+                                                <li><a href="#">Столешница</a></li>
+                                                <li><a href="#">Фартух</a></li>
+                                                <li><a href="#">Фурнитура</a></li>
+                                                <li><a href="#">Корпус кухни</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="contact.html">Цены</a></li>
@@ -133,7 +145,7 @@
                             </div>
                         </div>
                         <!-- Social button -->
-                        <div class="col-xl-4 col-lg-4 d-lg-block d-xl-block d-none ">
+                        <div class="col-xl-2 col-lg-2 d-lg-block d-xl-block d-none ">
                             <div class="book_room">
                                 <div class="socail_links">
                                     <ul class="js-clone-social">
@@ -154,10 +166,11 @@
                                         </li>
                                     </ul>
                                 </div>
+                                <!--
                                 <div class="book_btn d-none d-lg-block">
                                     <a class="popup-with-form" href="#test-form">Book A Room</a>
                                 </div>
-
+                                -->
                             </div>
                         </div>
                         <!-- burger button for modile views -->
