--- a/mon/index.html
+++ b/mon/index.html
@@ -98,9 +98,9 @@
                     <div class="row align-items-center no-gutters">
                         <!-- brand IMG-->
                         <div class="col-6 col-md-6 col-xl-2 col-lg-2  col-sm-6">
-                            <div class="logo-img text-left vertical-align-top">
+                            <div class="logo-img text-center vertical-align-top">
                                 <a href="index.html">
-                                    <img src="img/logo.png" alt="" >
+                                    <span class="logo-name">SV-KUHNI</span>
                                 </a>
                             </div>
                         </div>
@@ -1604,7 +1604,7 @@
 <!-- Rewievs -->
 <section class="mt-5 mb-5">
         <div class="container  p-0">
-            <div class="row justify-content-center align-items-center">
+            <div class="row justify-content-center align-items-center no-gutters">
                     <div class="col-12 no-gutters">
                         <div class="section_title text-center mb-5">
                             <span>Отзывы</span>
